--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,10 @@ repo: Sunai-Upptime # The name of this repository
 sites:
   - name: Sunai Website
     url: https://sunai.cl/en/
+    icon: https://sunai.cl/wp-content/uploads/2020/04/cropped-favicon-32x32.png
   - name: Neural
     url: https://neural.sunai.cl/
+    icon: https://neural.sunai.cl/fav.ico
 
 
 
